# trilium-py-cli

./: Issues.md  README.md  pyproject.toml
.fossil-settings/: ignore-glob
src/trilium_py_cli/: __init__.py  cli.py  utils.py
src/trilium_py_cli/commands/: __init__.py  config.py  info.py  notes.py
